# HETPIR

./: LICENSE  README.md
HETPIR/: CMakeLists.txt  client.cpp  client.hpp  fheoperations.cpp  fheoperations.hpp  main.cpp  params.cpp  params.hpp  preprocess.cpp  preprocess.hpp  server.cpp  server.hpp
